template/components/CTA/CTA.css
.cta {
	background: var(--db-brand-origin-default) !important;
	color: var(--db-brand-on-origin-default) !important;
	border-radius: var(--db-border-radius-sm) !important;
}

.cta-content {
	display: flex;
	flex-direction: column;
	gap: var(--db-spacing-fixed-lg);
	padding: var(--db-spacing-fixed-xl) 0;
}

.cta-content[data-align='start'] {
	align-items: flex-start;
	text-align: left;
}

.cta-content[data-align='end'] {
	align-items: flex-end;
	text-align: right;
}

.cta-title {
	max-width: var(--db-container-md);
	text-align: center;
	margin: 0 auto;
}

.cta-text {
	max-width: 60ch;
	text-align: center;
	margin: 0 auto;
}

.cta-actions {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: var(--db-spacing-fixed-sm);
}

.cta .db-button {
	text-decoration: none;
}

/* Brand variant (inverted on red background) */
.cta .db-button[data-variant='brand'] {
	background: var(--db-brand-on-origin-default);
	color: var(--db-brand-origin-default);
	/* stylelint-disable-next-line db-ux/use-border-color */
	border-color: var(--db-brand-on-origin-default);
}

.cta .db-button[data-variant='brand']:hover {
	opacity: 0.88;
}

.cta .db-button[data-variant='brand']:active {
	opacity: 0.76;
}

.cta .db-button[data-variant='brand']:not([data-disable-focus='true']):focus-visible {
	outline-color: var(--db-brand-on-origin-default);
}

/* Outlined variant */
.cta .db-button[data-variant='outlined'] {
	background: transparent;
	color: var(--db-brand-on-origin-default);
	border-color: var(--db-adaptive-on-bg-basic-emphasis-100-default);
}

.cta .db-button[data-variant='outlined']:hover {
	background: rgb(255 255 255 / 24%);
}

.cta .db-button[data-variant='outlined']:active {
	background: rgb(255 255 255 / 36%);
}

/* TODO: why do we define an outline on focus here, shouldn't this even already been defined by the system itself ? */
.cta .db-button[data-variant='outlined']:not([data-disable-focus='true']):focus-visible {
	outline: var(--db-border-width-2xs) solid var(--db-neutral-on-bg-basic-emphasis-100-default);
	outline-offset: var(--db-spacing-fixed-3xs);
}

@media (width <= 767px) {
	.cta {
		padding: var(--db-spacing-fixed-xl) var(--db-spacing-fixed-lg);
		gap: var(--db-spacing-fixed-lg);
	}
}

